--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
-						<div class="image"><img src="images/eqidna.png" alt="" /></div>
+						<div class="image"><img src="images/eqidna.jpg" alt="" /></div>
 						<div class="content">
 							<h3><strong>MINTING</strong></h3>
 							<p>One of the key features of the QDNA token contract is the ability to mint new tokens. Holders who maintain a balance for a minimum of 30 days without staking can mint 3.69% of their holdings monthly. This is a great incentive for users to hold on to their QDNA tokens. </p>
